--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "bootstrap": "~3.2.0",
     "angular-resource": "~1.2.0",
     "angular-animate": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "jvectormap": "~2.0.0",
+    "angular-bootstrap": "~0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
