--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-animate": "~1.2.0",
     "angular-route": "~1.2.0",
     "jvectormap": "~2.0.0",
-    "angular-bootstrap": "~0.11.2"
+    "angular-bootstrap": "~0.11.2",
+    "angular-local-storage": "~0.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
